test cases + bug fixing + doc update
